// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemCardViewer renders information tab 1`] = `
<div
  className="item-card"
>
  <ItemTabs
    changedTab={[Function]}
    selectedTab="information"
  />
  <div>
     
    <div
      className="item-content"
    >
      <div>
        <AboutThisItemDetail
          commonCoreStandardsDescription="commonCoreStandardsDescription"
          depthOfKnowledge="depthOfKnowledge"
          educationalDifficulty="educationalDifficulty"
          evidenceStatement="evidenceStatement"
          itemCardViewModel={
            Object {
              "bankKey": 1,
              "claimCode": "claim_1234",
              "claimLabel": "claim_math",
              "grade": 1,
              "gradeLabel": "1",
              "interactionTypeCode": "type01",
              "interactionTypeLabel": "type01label",
              "isPerformanceItem": false,
              "itemKey": 123,
              "subjectCode": "Math",
              "subjectLabel": "MTH",
              "targetHash": 323,
              "targetShortName": "something",
              "title": "test_title",
            }
          }
          rubrics={Array []}
          targetDescription="targetDescription"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemCardViewer renders rubric tab 1`] = `
<div
  className="item-card"
>
  <ItemTabs
    changedTab={[Function]}
    selectedTab="rubric"
  />
  <div>
     
     
  </div>
</div>
`;

exports[`ItemCardViewer renders viewer tab 1`] = `
<div
  className="item-card"
>
  <ItemTabs
    changedTab={[Function]}
    selectedTab="viewer"
  />
  <div>
     
    <div
      className="item-content"
    >
      <ItemViewerFrame
        url="http://ivs.smarterbalanced.org/items?ids=1-123"
      />
    </div>
     
  </div>
</div>
`;
